Align dashboard and export filters